--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wdio-spec-reporter",
   "version": "0.1.6",
   "description": "A WebdriverIO plugin. Report results in 'spec' format.",
-  "main": "build/reporter.js",
+  "main": "lib/reporter.js",
   "scripts": {
     "build": "run-s clean compile",
     "clean": "rm -rf ./build ./coverage",
